Health services api 동작 테스트

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
-        android:name=".JTGApplication"
+        android:name=".JTBApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -11,12 +11,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ZoneTwoGo"
+        android:theme="@style/Theme.ZoneTwoBe"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.ZoneTwoGo">
+            android:theme="@style/Theme.ZoneTwoBe">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
